[gd_scene load_steps=2 format=3 uid="uid://ctjhvqre3xmb3"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_ckw3i"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ckw3i")
world_scene_file = "res://scenes/world.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.314316, 0.314316, 0.314316, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -125.0
offset_right = 225.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1

[node name="CreateBrokenLobbyButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Create Broken Lobby	"

[node name="CreateWorkingLobbyButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Create (Sorta) Working Lobby"

[node name="JoinLobbyButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join Lobby"

[node name="LobbyIdForm" type="LineEdit" parent="ColorRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Known Lobby ID Here"
alignment = 1

[node name="JoinLobbyInstructions" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Or click an open lobby below"
horizontal_alignment = 1

[node name="RefreshButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Refresh Lobby List"

[node name="LobbyListPanel" type="Panel" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LobbyScrollContainer" type="ScrollContainer" parent="ColorRect/MarginContainer/VBoxContainer/LobbyListPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_top = -10.0
offset_right = 420.0
offset_bottom = 140.0

[node name="LobbyList" type="VBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer/LobbyListPanel/LobbyScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/CreateBrokenLobbyButton" to="." method="_on_create_broken_lobby_button_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/CreateWorkingLobbyButton" to="." method="_on_working_lobby_button_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/JoinLobbyButton" to="." method="_on_join_lobby_button_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/RefreshButton" to="." method="_on_refresh_button_pressed"]
